# octopoda

./: .gitignore  Cargo.toml  Makefile  README  build.rs  format-card.sh  link.ld  rust-toolchain.toml
raspi3-boot/: Cargo.toml
raspi3-boot/src/: boot_cores_armv8.S  lib.rs
src/: arch.rs  bsp.rs  defer.rs  driver.rs  ext.rs  gpio.rs  log.rs  main.rs  memory.rs  panic_wait.rs  runtime_init.rs  sync.rs  time.rs  uart.rs
src/arch/: asm.rs  cpu.rs  mod.rs  time.rs
src/arch/aarch64/: mod.rs  time.rs
src/arch/asm/: aarch64.rs  x86.rs
src/arch/cpu/: mod.rs
src/arch/time/: aarch64.rs  mod.rs
src/arch/x86_64/: mod.rs  time.rs
src/bsp/: bsp_rpi.rs  bsp_x86_64.rs  mod.rs
src/driver/: gpio.rs  mod.rs  text_vga.rs  uart.rs
targets/: aarch64-unknown-none.json  x86_64-unknown-none-softfloat.json
utils/: format-card.sh  install.sh
